@@ -1,3 +1,8 @@
+2014-12-16  Mark Wielaard  <mjw@redhat.com>
+
+	* readelf.c (print_debug_line_section): Correct overflow check for
+	unit_length.
+
 2014-12-15  Mark Wielaard  <mjw@redhat.com>
 
 	* readelf.c (notice_listptr): Return false if offset doesn't fit
